Add a div wrapper for the body with id content .

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" href="/style.css" type="text/css" />
 </head>
 <body>
-    {{ content }}
+    <div id="content">{{ content }}</div>
 </body>
 </html>
