--- a/style.css
+++ b/style.css
@@ -1,6 +1,30 @@
-html,body,p,div{margin:0;padding:0;}
-body{line-height:1;background:#e3ded8;font-family:Helvetica;}
-#content{overflow:hidden;border-radius:20px;width:600px;padding:0 15px 15px;margin:15px auto;background:#fff;}
-h1,h2,h3,h4,h5{font-family:Georgia;color:#003663;}
-p{padding:0 0 10px 0;line-height: 20px;letter-spacing:1px;color:#343434}
-li{margin:10px 0 10px}
+html, body, p, div {
+    margin:0;
+    padding:0;
+}
+body { 
+    line-height:1;
+    background:#e3ded8;
+    font-family:Helvetica;
+}
+#content {
+    overflow:hidden;
+    border-radius:20px;
+    max-width:600px;
+    padding:0 15px 15px;
+    margin:15px auto;
+    background:#fff;
+}
+h1, h2, h3, h4, h5 {
+    font-family:Georgia;
+    color:#003663;
+}
+p {
+    padding:0 0 10px 0;
+    line-height: 20px;
+    letter-spacing:1px;
+    color:#343434;
+}
+li {
+    margin:10px 0 10px;
+}
