--- a/style.css
+++ b/style.css
@@ -28,3 +28,19 @@ p {
 li {
     margin:10px 0 10px;
 }
+pre {
+    background-color: #EEE;
+    border: 1px solid #DDD;
+    border-bottom-left-radius: 3px 3px;
+    border-bottom-right-radius: 3px 3px;
+    border-top-left-radius: 3px 3px;
+    border-top-right-radius: 3px 3px;
+    color: #444;
+}
+code {
+    background-color: ghostWhite !important;
+    border: 1px solid #DEDEDE !important;
+    color: #444 !important;
+    font-size: 12px !important;
+    padding: 0px 0.2em !important;
+}
