--- a/style.css
+++ b/style.css
@@ -10,10 +10,15 @@ body {
 #content {
     overflow:hidden;
     border-radius:20px;
-    max-width:600px;
+    max-width:800px;
     padding:0 15px 15px;
     margin:15px auto;
     background:#fff;
+}
+.navigation {
+    float: left;
+    width: 200px;
+    margin: 20px 20px 0px 0px;
 }
 h1, h2, h3, h4, h5 {
     font-family:Georgia;
@@ -31,16 +36,12 @@ li {
 pre {
     background-color: #EEE;
     border: 1px solid #DDD;
-    border-bottom-left-radius: 3px 3px;
-    border-bottom-right-radius: 3px 3px;
-    border-top-left-radius: 3px 3px;
-    border-top-right-radius: 3px 3px;
+    border-radius:10px;
     color: #444;
+    padding: 10px 0px 0px 10px;
 }
 code {
-    background-color: ghostWhite !important;
-    border: 1px solid #DEDEDE !important;
     color: #444 !important;
-    font-size: 12px !important;
     padding: 0px 0.2em !important;
+    line-height: 20px;
 }
