--- a/_layouts/cloud.html
+++ b/_layouts/cloud.html
@@ -30,9 +30,8 @@
   </div>
   <div id="content">
     <div class="container_12">
-      <div class="grid_12">
-        {{ content }}
-      </div>
+      {{ content }}
+      <div class="clear"></div>
     </div>
   </div>
   <div id="footer">
