Gave meaning to the links in the top and replaced the index file with the new layout

--- a/_layouts/cloud.html
+++ b/_layouts/cloud.html
@@ -23,7 +23,7 @@
 <body>
 <div id="top">
   <div id="menu">
-    <a href="index.html">Home</a><a href="index.html">Documentation</a><a href="index.html">Community</a>
+    <a href="http://auraphp.github.com/">Home</a><a href="https://github.com/auraphp/docs/wiki">Documentation</a>
   </div>
   <div id="banner">
     <a href="http://www.auraphp.org/" id="logo"></a>
