--- a/_layouts/cloud.html
+++ b/_layouts/cloud.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>{{ title }} </title>
+  <title>{{ page.title }}</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
   <link rel="stylesheet" type="text/css" media="screen" href="/css/reset.css" />
