Removed the mail id and pointing to website( Make less spam ;) ) . Error in link for marcusk. Changed all links to auraphp.github.com itself rather than auraphp.org . May be in the future we can point if needed.

--- a/_layouts/cloud.html
+++ b/_layouts/cloud.html
@@ -26,7 +26,7 @@
     <a href="http://auraphp.github.com/">Home</a><a href="https://github.com/auraphp/docs/wiki">Documentation</a>
   </div>
   <div id="banner">
-    <a href="http://www.auraphp.org/" id="logo"></a>
+    <a href="http://auraphp.github.com/" id="logo"></a>
   </div>
   <div id="content">
     <div class="container_12">
@@ -37,8 +37,8 @@
   <div id="footer">
     <p>
       Copyright &copy; 2010 - 2011,
-      <a href="mailto:pmjones@solarphp.com">Paul M. Jones</a> and other contributors.<br> Logo Design by
-      <a href="http://http://www.marcusk.co.uk/">Marcus Kielly</a>, Site Design by <a href="http://www.naenius.com/">Mike van Riel</a>.
+      <a href="http://paul-m-jones.com/">Paul M. Jones</a> and other contributors.<br> Logo Design by
+      <a href="http://www.marcusk.co.uk/">Marcus Kielly</a>, Site Design by <a href="http://www.naenius.com/">Mike van Riel</a>.
     </p>
   </div>
 </div>
