--- a/_layouts/cloud.html
+++ b/_layouts/cloud.html
@@ -23,7 +23,7 @@
 <body>
 <div id="top">
   <div id="menu">
-    <a href="http://auraphp.github.com/">Home</a><a href="https://github.com/auraphp/docs/wiki">Documentation</a>
+    <a href="http://auraphp.github.com/">Home</a><a href="http://auraphp.github.com/blog">Blog</a><a href="https://github.com/auraphp/docs/wiki">Documentation</a>
   </div>
   <div id="banner">
     <a href="http://auraphp.github.com/" id="logo"></a>
