--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -21,6 +21,7 @@
 				<p class="logo"><a href="{{ HOME_PATH }}/blog">{{ site.title }}</a></p>
 				<nav class="nav-global">
 					<ul>
+						<li class="blog"><a href="/blog">Blog</a></li>
 						{% assign pages_list = site.pages %}
 						{% assign group = 'navigation' %}
 						{% include JB/pages_list %}
