--- a/css/text.css
+++ b/css/text.css
@@ -3,7 +3,7 @@ body {
 }
 
 pre,code {
-    font-family: 'DejaVu Sans Mono','Andale Mono',Monaco,Consolas,monospace;
+    font-family: 'DejaVu Sans Mono',Menlo,'Andale Mono',Monaco,Consolas,monospace;
 }
 
 hr {
