--- a/css/text.css
+++ b/css/text.css
@@ -8,9 +8,8 @@ pre,code {
 
 pre {
     background-color: #ccc;
-    border-radius: 10px;
-    padding: 10px 0px 0px 10px;
-
+    border-radius: 7px;
+    padding: 7px;
 }
 
 hr {
