--- a/css/text.css
+++ b/css/text.css
@@ -2,7 +2,7 @@ body {
     font: 13px/1.5 'Helvetica Neue',Arial,'Liberation Sans',FreeSans,sans-serif
 }
 
-pre,code {
+code {
     font-family: 'DejaVu Sans Mono',Menlo,'Andale Mono',Monaco,Consolas,monospace;
     background-color: #ddd;
     border-radius: 2px;
@@ -10,6 +10,7 @@ pre,code {
 }
 
 pre {
+    font-family: 'DejaVu Sans Mono',Menlo,'Andale Mono',Monaco,Consolas,monospace;
     background-color: #ddd;
     border-radius: 7px;
     padding: 7px;
