--- a/css/text.css
+++ b/css/text.css
@@ -4,9 +4,9 @@ body {
 
 code {
     font-family: 'DejaVu Sans Mono',Menlo,'Andale Mono',Monaco,Consolas,monospace;
-    background-color: #ddd;
-    border-radius: 2px;
-    padding: 2px;
+    background-color: #eee;
+    border-radius: 3px;
+    padding: 1px;
 }
 
 pre {
