--- a/css/text.css
+++ b/css/text.css
@@ -11,7 +11,7 @@ code {
 
 pre {
     font-family: 'DejaVu Sans Mono',Menlo,'Andale Mono',Monaco,Consolas,monospace;
-    background-color: #ddd;
+    background-color: #eee;
     border-radius: 7px;
     padding: 7px;
 }
