reduce font size for pre and code

--- a/css/text.css
+++ b/css/text.css
@@ -3,6 +3,7 @@ body {
 }
 
 code {
+    font-size: 10px;
     font-family: 'DejaVu Sans Mono',Menlo,'Andale Mono',Monaco,Consolas,monospace;
     background-color: #eee;
     border-radius: 3px;
@@ -10,6 +11,7 @@ code {
 }
 
 pre {
+    font-size: 10px;
     font-family: 'DejaVu Sans Mono',Menlo,'Andale Mono',Monaco,Consolas,monospace;
     background-color: #eee;
     border-radius: 7px;
