put author on next line

--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -1,5 +1,6 @@
 <div class="page-header">
-  <h1>{{ page.title }} <small>{{ page.author }}</small></h1>
+  <h1>{{ page.title }}</h1>
+  <p><small>{{ page.author }}</small></p>
 </div>
 
 <div class="row">
