--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -31,7 +31,7 @@
     <div class="author"><span>{{ page.author }}</span></div>
     
     <h4>Published</h4>
-    <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>
+    <div class="date"><span>{{ page.date | date: "%d %B %Y" }}</span></div>
 
   {% unless page.tags == empty %}
     <h4>Tags</h4>
