--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -71,6 +71,14 @@
             {{ content }}
             <hr>
             <footer>
+                <!-- Site Meter -->
+                <script type="text/javascript" src="http://s51.sitemeter.com/js/counter.js?site=s51auraphp"></script>
+                <noscript>
+                    <a href="http://s51.sitemeter.com/stats.asp?site=s51auraphp" target="_top">
+                        <img src="http://s51.sitemeter.com/meter.asp?site=s51auraphp" alt="Site Meter" border="0"/>
+                    </a>
+                </noscript>
+                <!-- Copyright (c)2009 Site Meter -->
                 <p>&copy; 2013, The Aura Project for PHP</p>
             </footer>
         </div> <!-- /container -->
