--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -72,14 +72,23 @@
             <hr>
             <footer>
                 <p>&copy; 2013, The Aura Project for PHP</p>
-                <!-- Site Meter -->
-                <script type="text/javascript" src="http://s51.sitemeter.com/js/counter.js?site=s51auraphp"></script>
-                <noscript><div>
-                    <a href="http://s51.sitemeter.com/stats.asp?site=s51auraphp" target="_top">
-                        <img src="http://s51.sitemeter.com/meter.asp?site=s51auraphp" alt="Site Meter" border="0"/>
-                    </a>
-                </div></noscript>
-                <!-- Copyright (c)2009 Site Meter -->
+                <!-- Start of StatCounter Code for Default Guide -->
+                <script type="text/javascript">
+                var sc_project=9117595; 
+                var sc_invisible=0; 
+                var sc_security="b58cd28d"; 
+                var scJsHost = (("https:" == document.location.protocol) ?
+                "https://secure." : "http://www.");
+                document.write("<sc"+"ript type='text/javascript' src='" +
+                scJsHost+
+                "statcounter.com/counter/counter.js'></"+"script>");
+                </script>
+                <noscript><div class="statcounter"><a title="web analytics"
+                href="http://statcounter.com/" target="_blank"><img
+                class="statcounter"
+                src="http://c.statcounter.com/9117595/0/b58cd28d/0/"
+                alt="web analytics"></a></div></noscript>
+                <!-- End of StatCounter Code for Default Guide -->
             </footer>
         </div> <!-- /container -->
 
