add statcounter back

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -72,7 +72,24 @@
             <hr>
             <footer>
                 <p>&copy; 2013, The Aura Project for PHP</p>
-            </footer>
+                <!-- Start of StatCounter Code for Default Guide -->
+                <script type="text/javascript">
+                var sc_project=9109930; 
+                var sc_invisible=0; 
+                var sc_security="319fff7b"; 
+                var scJsHost = (("https:" == document.location.protocol) ?
+                "https://secure." : "http://www.");
+                document.write("<sc"+"ript type='text/javascript' src='" +
+                scJsHost+
+                "statcounter.com/counter/counter.js'></"+"script>");
+                </script>
+                <noscript><div class="statcounter"><a title="web statistics"
+                href="http://statcounter.com/free-web-stats/"
+                target="_blank"><img class="statcounter"
+                src="http://c.statcounter.com/9109930/0/319fff7b/0/"
+                alt="web statistics"></a></div></noscript>
+                <!-- End of StatCounter Code for Default Guide -->
+        </footer>
         </div> <!-- /container -->
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
