--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -74,22 +74,22 @@
                 <p>&copy; 2013, The Aura Project for PHP</p>
                 <!-- Start of StatCounter Code for Default Guide -->
                 <script type="text/javascript">
-                var sc_project=9109930; 
+                var sc_project=9117595; 
                 var sc_invisible=0; 
-                var sc_security="319fff7b"; 
+                var sc_security="b58cd28d"; 
                 var scJsHost = (("https:" == document.location.protocol) ?
                 "https://secure." : "http://www.");
                 document.write("<sc"+"ript type='text/javascript' src='" +
                 scJsHost+
                 "statcounter.com/counter/counter.js'></"+"script>");
                 </script>
-                <noscript><div class="statcounter"><a title="web statistics"
+                <noscript><div class="statcounter"><a title="site stats"
                 href="http://statcounter.com/free-web-stats/"
                 target="_blank"><img class="statcounter"
-                src="http://c.statcounter.com/9109930/0/319fff7b/0/"
-                alt="web statistics"></a></div></noscript>
+                src="http://c.statcounter.com/9117595/0/b58cd28d/0/"
+                alt="site stats"></a></div></noscript>
                 <!-- End of StatCounter Code for Default Guide -->
-        </footer>
+            </footer>
         </div> <!-- /container -->
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
