--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -45,22 +45,28 @@
                         <ul class="nav">
                             <li {% if page.active == 'home'      %}class="active"{% endif %}><a href="/">Home</a></li>
                             <li {% if page.active == 'about'     %}class="active"{% endif %}><a href="/about">About</a></li>
-                            <li {% if page.active == 'packages'  %}class="active"{% endif %}><a href="/packages">Packages</a></li>
-                            <!-- <li {% if page.active == 'framework' %}class="active"{% endif %}><a href="/framework">Framework</a></li> -->
+                            <li {% if page.active == 'packages'  %}class="active"{% endif %} class="dropdown">
+                                <a href="/packages" class="dropdown-toggle" data-toggle="dropdown">Packages <b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><ahref="/packages/Aura.Autoload">Autoload</a></li>
+                                    <li><ahref="/packages/Aura.Cli">Cli</a></li>
+                                    <li><ahref="/packages/Aura.Di">Di</a></li>
+                                    <li><ahref="/packages/Aura.Filter">Filter</a></li>
+                                    <li><ahref="/packages/Aura.Http">Http</a></li>
+                                    <li><ahref="/packages/Aura.Input">Input</a></li>
+                                    <li><ahref="/packages/Aura.Intl">Intl</a></li>
+                                    <li><ahref="/packages/Aura.Marshal">Marshal</a></li>
+                                    <li><ahref="/packages/Aura.Router">Router</a></li>
+                                    <li><ahref="/packages/Aura.Session">Session</a></li>
+                                    <li><ahref="/packages/Aura.Signal">Signal</a></li>
+                                    <li><ahref="/packages/Aura.Sql">Sql</a></li>
+                                    <li><ahref="/packages/Aura.Uri">Uri</a></li>
+                                    <li><ahref="/packages/Aura.View">View</a></li>
+                                    <li><ahref="/packages/Aura.Web">Web</a></li>
+                                </ul>
+                            </li>
                             <li {% if page.active == 'blog'      %}class="active"{% endif %}><a href="/blog">Blog</a></li>
                             <li {% if page.active == 'community' %}class="active"{% endif %}><a href="/community">Community</a></li>
-                            <!-- <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Github <b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Autoload</a></li>
-                                    <li><a href="#">Cli</a></li>
-                                    <li><a href="#">Di</a></li>
-                                    <li class="divider"></li>
-                                    <li class="nav-header">Nav header</li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li><a href="#">One more separated link</a></li>
-                                </ul>
-                            </li> -->
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
