add a packages-overview link

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -48,6 +48,8 @@
                             <li {% if page.active == 'packages'  %}class="active"{% endif %} class="dropdown">
                                 <a href="/packages" class="dropdown-toggle" data-toggle="dropdown">Packages <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
+                                    <li><a href="/packages">Package Overview</a></li>
+                                    <li class="divider"></li>
                                     <li><a href="/packages/Aura.Autoload">Autoload</a></li>
                                     <li><a href="/packages/Aura.Cli">Cli</a></li>
                                     <li><a href="/packages/Aura.Di">Di</a></li>
