--- a/_includes/manuals/en/v1/contents.html
+++ b/_includes/manuals/en/v1/contents.html
@@ -1,40 +1,40 @@
 <aside>
 <ul class="nav nav-list">
   <li>
-    <a href="{{ site.url }}/manuals/en/v1/introduction/">Introduction</a>
+    <a href="{{ site.url }}/manuals/v1/en/introduction/">Introduction</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/en/v1/installation/">Installation</a>
+    <a href="{{ site.url }}/manuals/v1/en/installation/">Installation</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/en/v1/system-organization/">System Organization</a>
+    <a href="{{ site.url }}/manuals/v1/en/system-organization/">System Organization</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/en/v1/package-organization/">Package Organization</a>
+    <a href="{{ site.url }}/manuals/v1/en/package-organization/">Package Organization</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/en/v1/controller/">Controller</a>
+    <a href="{{ site.url }}/manuals/v1/en/controller/">Controller</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/en/v1/view/">The View</a>
+    <a href="{{ site.url }}/manuals/v1/en/view/">The View</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/en/v1/routing/">Routing</a>
+    <a href="{{ site.url }}/manuals/v1/en/routing/">Routing</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/en/v1/di/">Dependency Injection</a>
+    <a href="{{ site.url }}/manuals/v1/en/di/">Dependency Injection</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/en/v1/sql/">SQL</a>
+    <a href="{{ site.url }}/manuals/v1/en/sql/">SQL</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/en/v1/filter/">Validation and Sanitization</a>
+    <a href="{{ site.url }}/manuals/v1/en/filter/">Validation and Sanitization</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/en/v1/forms/">Creating Forms</a>
+    <a href="{{ site.url }}/manuals/v1/en/forms/">Creating Forms</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/en/v1/session/">Session</a>
+    <a href="{{ site.url }}/manuals/v1/en/session/">Session</a>
   </li>
 </ul>
 </aside>
