--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -68,6 +68,7 @@
                                     <li><a href="/packages/Aura.Web">Web</a></li>
                                 </ul>
                             </li>
+                            <li {% if page.active == 'manuals'      %}class="active"{% endif %}><a href="/manuals">Manuals</a></li>
                             <li {% if page.active == 'blog'      %}class="active"{% endif %}><a href="/blog">Blog</a></li>
                             <li {% if page.active == 'community' %}class="active"{% endif %}><a href="/community">Community</a></li>
                         </ul>
