--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -68,7 +68,8 @@
                                     <li><a href="/packages/Aura.Web">Web</a></li>
                                 </ul>
                             </li>
-                            <li {% if page.active == 'manuals'      %}class="active"{% endif %}><a href="/manuals">Manuals</a></li>
+                            <li {% if page.active == 'framework' %}class="active"{% endif %}><a href="/framework">Framework</a></li>
+                            <li {% if page.active == 'manuals'   %}class="active"{% endif %}><a href="/manuals">Manuals</a></li>
                             <li {% if page.active == 'blog'      %}class="active"{% endif %}><a href="/blog">Blog</a></li>
                             <li {% if page.active == 'community' %}class="active"{% endif %}><a href="/community">Community</a></li>
                         </ul>
@@ -81,7 +82,7 @@
             {{ content }}
             <hr>
             <footer>
-                <p>&copy; 2013, The Aura Project for PHP</p>
+                <p>&copy; 2011-2013, Aura for PHP</p>
                 <!-- Start of StatCounter Code for Default Guide -->
                 <script type="text/javascript">
                 var sc_project=9117595; 
