Re arrange the japanese manual

--- a/_layouts/docs-ja.html
+++ b/_layouts/docs-ja.html
@@ -2,6 +2,6 @@
 layout: site
 ---
 <div class="row-fluid">
-  <div class="span3">{% include manuals/v1/en/contents.html %}</div>
+  <div class="span3">{% include manuals/v1/ja/contents.html %}</div>
   <div class="span9">{{ content }}</div>
 </div>
