[#23][manual[ja] translate left navigation

--- a/_includes/manuals/v1/ja/contents.html
+++ b/_includes/manuals/v1/ja/contents.html
@@ -1,40 +1,40 @@
 <aside>
 <ul class="nav nav-list">
   <li>
-    <a href="{{ site.url }}/manuals/v1/ja/introduction/">Introduction</a>
+    <a href="{{ site.url }}/manuals/v1/ja/introduction/">イントロダクション</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/v1/ja/installation/">Installation</a>
+    <a href="{{ site.url }}/manuals/v1/ja/installation/">インストール</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/v1/ja/system-organization/">System Organization</a>
+    <a href="{{ site.url }}/manuals/v1/ja/system-organization/">システム構成</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/v1/ja/package-organization/">Package Organization</a>
+    <a href="{{ site.url }}/manuals/v1/ja/package-organization/">パッケージ構成</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/v1/ja/controller/">Controller</a>
+    <a href="{{ site.url }}/manuals/v1/ja/controller/">コントローラー</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/v1/ja/view/">The View</a>
+    <a href="{{ site.url }}/manuals/v1/ja/view/">ビュー</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/v1/ja/routing/">Routing</a>
+    <a href="{{ site.url }}/manuals/v1/ja/routing/">ルーティング</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/v1/ja/di/">Dependency Injection</a>
+    <a href="{{ site.url }}/manuals/v1/ja/di/">ディペンデンシーインジェクション</a>
   </li>
   <li>
     <a href="{{ site.url }}/manuals/v1/ja/sql/">SQL</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/v1/ja/filter/">Validation and Sanitization</a>
+    <a href="{{ site.url }}/manuals/v1/ja/filter/">バリデーションとサイニタイズ</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/v1/ja/forms/">Creating Forms</a>
+    <a href="{{ site.url }}/manuals/v1/ja/forms/">フォーム作成</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/v1/ja/session/">Session</a>
+    <a href="{{ site.url }}/manuals/v1/ja/session/">セッション</a>
   </li>
 </ul>
 </aside>
