Fix the page title not appearing and there by causing multiple reddits not getting noticied. Feedback from spam reported at http://www.reddit.com/r/PHP/comments/1qwje8/a_peek_at_aura_v2_aurarouter/ . Thank you http://www.reddit.com/user/Raaoul

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -7,10 +7,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="description" content="">
+        {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
         <meta name="viewport" content="width=device-width">
 
-        <title>Aura for PHP</title>
+        <title>{% if page.title %}{{ page.title }}{% else %}Aura for PHP{% endif %}</title>
         
         <link rel="stylesheet" href="/css/spacelab.css">
         <style>
