--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -44,10 +44,10 @@
                     <a class="brand" href="/">Aura for PHP</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
-                            <li {% if page.active == 'home'      %}class="active"{% endif %}><a href="/">Home</a></li>
-                            <li {% if page.active == 'about'     %}class="active"{% endif %}><a href="/about">About</a></li>
+                            <li {% if page.active == 'home'         %}class="active"{% endif %}><a href="/">Home</a></li>
+                            <li {% if page.active == 'about'        %}class="active"{% endif %}><a href="/about">About</a></li>
                             <li class="{% if page.active == 'packages'  %}active {% endif %}dropdown">
-                                <a href="/packages" class="dropdown-toggle" data-toggle="dropdown">Packages <b class="caret"></b></a>
+                                <a href="/packages" class="dropdown-toggle" data-toggle="dropdown">Packages (v1) <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/packages">Package Overview</a></li>
                                     <li class="divider"></li>
@@ -68,10 +68,11 @@
                                     <li><a href="/packages/Aura.Web">Web</a></li>
                                 </ul>
                             </li>
-                            <li {% if page.active == 'framework' %}class="active"{% endif %}><a href="/framework">Framework</a></li>
-                            <li {% if page.active == 'manuals'   %}class="active"{% endif %}><a href="/manuals">Manuals</a></li>
-                            <li {% if page.active == 'blog'      %}class="active"{% endif %}><a href="/blog">Blog</a></li>
-                            <li {% if page.active == 'community' %}class="active"{% endif %}><a href="/community">Community</a></li>
+                            <li {% if page.active == 'framework'    %}class="active"{% endif %}><a href="/framework">Framework (v1)</a></li>
+                            <li {% if page.active == 'manuals'      %}class="active"{% endif %}><a href="/manuals">Manuals (v1)</a></li>
+                            <li {% if page.active == 'packages-v2'  %}class="active"{% endif %}><a href="/packages/v2">Packages (v2)</a></li>
+                            <li {% if page.active == 'blog'         %}class="active"{% endif %}><a href="/blog">Blog</a></li>
+                            <li {% if page.active == 'community'    %}class="active"{% endif %}><a href="/community">Community</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
