--- a/_includes/manuals/v1/en/contents.html
+++ b/_includes/manuals/v1/en/contents.html
@@ -36,5 +36,8 @@
   <li>
     <a href="{{ site.url }}/manuals/v1/en/session/">Session</a>
   </li>
+  <li>
+    <a href="{{ site.url }}/manuals/v1/en/credits/">Thanks</a>
+  </li>
 </ul>
 </aside>
