--- a/_includes/manuals/v1/ja/contents.html
+++ b/_includes/manuals/v1/ja/contents.html
@@ -36,5 +36,8 @@
   <li>
     <a href="{{ site.url }}/manuals/v1/ja/session/">セッション</a>
   </li>
+  <li>
+    <a href="{{ site.url }}/manuals/v1/ja/credits/">Thanks</a>
+  </li>
 </ul>
 </aside>
