add contributors link in the navigation

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -73,6 +73,7 @@
                             <li {% if page.active == 'packages-v2'  %}class="active"{% endif %}><a href="/packages/v2">Packages (v2)</a></li>
                             <li {% if page.active == 'blog'         %}class="active"{% endif %}><a href="/blog">Blog</a></li>
                             <li {% if page.active == 'community'    %}class="active"{% endif %}><a href="/community">Community</a></li>
+                            <li {% if page.active == 'contributors'    %}class="active"{% endif %}><a href="/contributors">Contributors</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
