--- a/css/main.css
+++ b/css/main.css
@@ -15,12 +15,12 @@ td, th {
     float: left;
     margin-left: -60px;
 }
-
-.contributor:nth-child(2n+1) {
-    background: none repeat scroll 0 0 #EEEEEE;
-}
 .contributor {
     line-height: 25px;
     overflow: hidden;
     padding: 10px 10px 10px 70px;
+    height: 50px;
+    background:#F8F8F8;
+    margin-bottom: 10px;
+    border-bottom: 1px dotted #C5C5C5;
 }
