--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width">
 
         <title>{% if page.title %}{{ page.title }}{% else %}Aura for PHP{% endif %}</title>
-        
+
         <link rel="stylesheet" href="/css/spacelab.css">
         <style>
             body {
@@ -25,7 +25,7 @@
 
         <script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
-    
+
     <body>
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
@@ -73,7 +73,7 @@
                             <li {% if page.active == 'packages-v2'  %}class="active"{% endif %}><a href="/packages/v2">Packages (v2)</a></li>
                             <li {% if page.active == 'blog'         %}class="active"{% endif %}><a href="/blog">Blog</a></li>
                             <li {% if page.active == 'community'    %}class="active"{% endif %}><a href="/community">Community</a></li>
-                            <li {% if page.active == 'contributors'    %}class="active"{% endif %}><a href="/contributors">Contributors</a></li>
+                            <li {% if page.active == 'contributing' %}class="active"{% endif %}><a href="/contributing">Contributing</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
@@ -87,9 +87,9 @@
                 <p>&copy; 2011-2014, Aura for PHP</p>
                 <!-- Start of StatCounter Code for Default Guide -->
                 <script type="text/javascript">
-                var sc_project=9117595; 
-                var sc_invisible=0; 
-                var sc_security="b58cd28d"; 
+                var sc_project=9117595;
+                var sc_invisible=0;
+                var sc_security="b58cd28d";
                 var scJsHost = (("https:" == document.location.protocol) ?
                 "https://secure." : "http://www.");
                 document.write("<sc"+"ript type='text/javascript' src='" +
