--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -68,7 +68,14 @@
                                     <li><a href="/packages/Aura.Web">Web</a></li>
                                 </ul>
                             </li>
-                            <li {% if page.active == 'framework'    %}class="active"{% endif %}><a href="/framework">Framework (v1)</a></li>
+                            <li class="{% if page.active == 'framework'  %}active {% endif %}dropdown">
+                                <a href="/framework" class="dropdown-toggle" data-toggle="dropdown">Framework<b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/framework">Framework</a></li>
+                                    <li><a href="/framework/1.0">Version 1</a></li>
+                                    <li><a href="/framework/2.0">Version 2</a></li>
+                                </ul>
+                            </li>
                             <li {% if page.active == 'manuals'      %}class="active"{% endif %}><a href="/manuals">Manuals (v1)</a></li>
                             <li {% if page.active == 'packages-v2'  %}class="active"{% endif %}><a href="/packages/v2">Packages (v2)</a></li>
                             <li {% if page.active == 'blog'         %}class="active"{% endif %}><a href="/blog">Blog</a></li>
