--- a/_includes/manuals/v2/en/contents.html
+++ b/_includes/manuals/v2/en/contents.html
@@ -4,7 +4,7 @@
     <a href="{{ site.url }}/manuals/2.0/en/quick-start/">Quick Start</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/2.0/en/introduction/">Introduction</a>
+    <a href="{{ site.url }}/manuals/2.0/en/">Introduction</a>
   </li>
   <li>
     <a href="{{ site.url }}/manuals/2.0/en/configuration/">Configuration</a>
