--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -76,7 +76,7 @@
                                     <li><a href="/framework/2.0">Version 2</a></li>
                                 </ul>
                             </li>
-                            <li {% if page.active == 'manuals'      %}class="active"{% endif %}><a href="/manuals">Manuals (v1)</a></li>
+                            <li {% if page.active == 'manuals'      %}class="active"{% endif %}><a href="/manuals">Manuals (v1 & v2)</a></li>
                             <li {% if page.active == 'packages-v2'  %}class="active"{% endif %}><a href="/packages/v2">Packages (v2)</a></li>
                             <li {% if page.active == 'blog'         %}class="active"{% endif %}><a href="/blog">Blog</a></li>
                             <li {% if page.active == 'community'    %}class="active"{% endif %}><a href="/community">Community</a></li>
