--- a/css/main.css
+++ b/css/main.css
@@ -24,3 +24,14 @@ td, th {
     margin-bottom: 10px;
     border-bottom: 1px dotted #C5C5C5;
 }
+
+#top-link-block.affix-top {
+    position: absolute; /* allows it to "slide" up into view */
+    bottom: -82px;
+    left: 10px;
+}
+#top-link-block.affix {
+    position: fixed; /* keeps it on the bottom once in view */
+    bottom: 18px;
+    left: 10px;
+}
