Float to right for top navigation

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -112,7 +112,7 @@
                 <!-- End of StatCounter Code for Default Guide -->
             </footer>
         </div> <!-- /container -->
-        <div>
+        <div class="pull-right">
           <span id="top-link-block" class="hidden">
             <a href="#top" class="well well-sm" onclick="$('html,body').animate({scrollTop:0},'slow');return false;">
                 <i class="glyphicon glyphicon-chevron-up"></i> Back to Top
