[#52] Japanese manual menu

--- a/_includes/manuals/v2/ja/contents.html
+++ b/_includes/manuals/v2/ja/contents.html
@@ -1,49 +1,49 @@
 <aside>
 <ul class="nav nav-list">
   <li>
-    <a href="{{ site.url }}/manuals/2.0/ja/quick-start/">Quick Start</a>
+    <a href="{{ site.url }}/manuals/2.0/ja/quick-start/">クイックスタート</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/2.0/ja/">Introduction</a>
+    <a href="{{ site.url }}/manuals/2.0/ja/">イントロダクション</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/2.0/ja/configuration/">Configuration</a>
+    <a href="{{ site.url }}/manuals/2.0/ja/configuration/">コンフィギュレーション</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/2.0/ja/router/">Routing</a>
+    <a href="{{ site.url }}/manuals/2.0/ja/router/">ルーティング</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/2.0/ja/dispatcher/">Dispatching</a>
+    <a href="{{ site.url }}/manuals/2.0/ja/dispatcher/">ディスパッチ</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/2.0/ja/request/">Request</a>
+    <a href="{{ site.url }}/manuals/2.0/ja/request/">リクエスト</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/2.0/ja/response/">Response</a>
+    <a href="{{ site.url }}/manuals/2.0/ja/response/">レスポンス</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/2.0/ja/di/">Depjadjacy Injection</a>
+    <a href="{{ site.url }}/manuals/2.0/ja/di/">ディペンデンシーインジェクション</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/2.0/ja/view/">View</a>
+    <a href="{{ site.url }}/manuals/2.0/ja/view/">ビュー</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/2.0/ja/forms/">Forms</a>
+    <a href="{{ site.url }}/manuals/2.0/ja/forms/">フォーム</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/2.0/ja/validation/">Validation</a>
+    <a href="{{ site.url }}/manuals/2.0/ja/validation/">バリデーション</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/2.0/ja/intl/">Internationalization</a>
+    <a href="{{ site.url }}/manuals/2.0/ja/intl/">国際化</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/2.0/ja/session/">Session</a>
+    <a href="{{ site.url }}/manuals/2.0/ja/session/">セッション</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/2.0/ja/cli/">Command Line</a>
+    <a href="{{ site.url }}/manuals/2.0/ja/cli/">コマンドライン</a>
   </li>
   <li>
-    <a href="{{ site.url }}/manuals/2.0/ja/setup/">Setting up</a>
+    <a href="{{ site.url }}/manuals/2.0/ja/setup/">セットアップ</a>
   </li>
 </ul>
 </aside>
