--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@
     border-bottom: 1px solid silver;
 }
 
+#packages tr :hover {
+    background: #ddd;
+}
+
 td, th {
     vertical-align: top;
     padding: 10px;
