--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -47,15 +47,7 @@
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li {% if page.active == 'about'        %}class="active"{% endif %}><a href="/about">About</a></li>
-                            <li class="{% if page.active == 'framework'  %}active {% endif %}dropdown">
-                                <a href="/framework" class="dropdown-toggle" data-toggle="dropdown">Framework<b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="/framework">Framework</a></li>
-                                    <li><a href="/framework/1.0">Version 1</a></li>
-                                    <li><a href="/framework/2.0">Version 2</a></li>
-                                </ul>
-                            </li>
-                            <li {% if page.active == 'manuals'      %}class="active"{% endif %}><a href="/manuals">Manuals (v1 & v2)</a></li>
+                            <li {% if page.active == 'manuals'      %}class="active"{% endif %}><a href="/manuals">Framework Manuals</b></a>
                             <li {% if page.active == 'blog'         %}class="active"{% endif %}><a href="/blog">Blog</a></li>
                             <li {% if page.active == 'community'    %}class="active"{% endif %}><a href="/community">Community</a></li>
                             <li {% if page.active == 'contributing' %}class="active"{% endif %}><a href="/contributing">Contributing</a></li>
