--- a/_includes/manuals/v1/de/contents.html
+++ b/_includes/manuals/v1/de/contents.html
@@ -1,4 +1,5 @@
 <aside>
+<p>Aura 1.x</p>
 <ul class="nav nav-list">
   <li>
     <a href="{{ site.url }}/manuals/v1/de/introduction/">Introduction</a>
