put 'Aura for PHP' on every title

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -28,7 +28,7 @@
         <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
 
-        <title>{% if page.title %}{{ page.title }}{% else %}Aura for PHP{% endif %}</title>
+        <title>Aura for PHP{% if page.title %} : {{ page.title }}{% endif %}</title>
 
         <link rel="stylesheet" href="/css/spacelab.css">
         <style>
