--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -42,8 +42,7 @@
         <link rel="stylesheet" href="/css/pygments.css" >
 
         <script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
-        <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.9.1.js"><\/script>')</script>
+        <script src="/js/vendor/jquery-1.9.1.min.js"></script>
     </head>
 
     <body>
@@ -107,7 +106,6 @@
         </div>
         <script src="/js/vendor/bootstrap.min.js"></script>
         <script src="/js/plugins.js"></script>
-        <script src="/js/main.js"></script>
         <script>
             var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
