--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -5,10 +5,15 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 {% include JB/setup %}
     <head>
+        <title>Aura for PHP{% if page.title %} : {{ page.title }}{% endif %}</title>
+
+        {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
         <meta name="viewport" content="width=device-width">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff">
 
         <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
@@ -24,25 +29,17 @@
         <link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
         <link rel="manifest" href="/favicon/manifest.json">
-        <meta name="msapplication-TileColor" content="#ffffff">
-        <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
-        <meta name="theme-color" content="#ffffff">
-
-        <title>Aura for PHP{% if page.title %} : {{ page.title }}{% endif %}</title>
 
         <link rel="stylesheet" href="/css/spacelab.css">
-        <style>
-            body {
-                padding-top: 60px;
-                padding-bottom: 40px;
-            }
-        </style>
         <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
         <link rel="stylesheet" href="/css/main.css">
         <link rel="stylesheet" href="/css/pygments.css" >
 
         <script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
         <script src="/js/vendor/jquery-1.9.1.min.js"></script>
+        <script src="/js/vendor/bootstrap.min.js"></script>
+        <script src="/js/plugins.js"></script>
+
     </head>
 
     <body>
@@ -73,30 +70,26 @@
                 </div>
             </div>
         </div>
+
         <div class="container">
+
             {{ content }}
-            <hr>
+
             <footer>
                 <p>&copy; 2011-2015, Aura for PHP</p>
-                <!-- Start of StatCounter Code for Default Guide -->
-                <script type="text/javascript">
-                var sc_project=9117595;
-                var sc_invisible=0;
-                var sc_security="b58cd28d";
-                var scJsHost = (("https:" == document.location.protocol) ?
-                "https://secure." : "http://www.");
-                document.write("<sc"+"ript type='text/javascript' src='" +
-                scJsHost+
-                "statcounter.com/counter/counter.js'></"+"script>");
-                </script>
-                <noscript><div class="statcounter"><a title="site stats"
-                href="http://statcounter.com/free-web-stats/"
-                target="_blank"><img class="statcounter"
-                src="http://c.statcounter.com/9117595/0/b58cd28d/0/"
-                alt="site stats"></a></div></noscript>
-                <!-- End of StatCounter Code for Default Guide -->
+                <div class="statcounter">
+                    <a title="site stats"
+                        href="//statcounter.com/free-web-stats/"
+                        target="_blank"
+                    ><img class="statcounter"
+                        src="//c.statcounter.com/9117595/0/b58cd28d/0/"
+                        alt="site stats"
+                    ></a>
+                </div>
             </footer>
-        </div> <!-- /container -->
+
+        </div>
+
         <div class="pull-right">
           <span id="top-link-block" class="hidden">
             <a href="#top" class="well well-sm" onclick="$('html,body').animate({scrollTop:0},'slow');return false;">
@@ -104,22 +97,8 @@
             </a>
           </span>
         </div>
-        <script src="/js/vendor/bootstrap.min.js"></script>
-        <script src="/js/plugins.js"></script>
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
 
-            // Only enable if the document has a long scroll bar
-            // Note the window height + offset
-            if ( ($(window).height() + 100) < $(document).height() ) {
-                $('#top-link-block').removeClass('hidden').affix({
-                    // how far to scroll down before link "slides" into view
-                    offset: {top:100}
-                });
-            }
-        </script>
+        <script src="/js/google.js" type="text/javascript"></script>
+
     </body>
 </html>
