touch up formatting

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -76,16 +76,15 @@
             {{ content }}
 
             <footer>
-                <p>&copy; 2011-2015, Aura for PHP</p>
-                <div class="statcounter">
-                    <a title="site stats"
-                        href="//statcounter.com/free-web-stats/"
-                        target="_blank"
-                    ><img class="statcounter"
-                        src="//c.statcounter.com/9117595/0/b58cd28d/0/"
-                        alt="site stats"
-                    ></a>
-                </div>
+                <p>&copy; 2011-2015, Aura for PHP <a
+                    title="site stats"
+                    href="//statcounter.com/free-web-stats/"
+                    target="_blank"
+                ><img
+                    class="statcounter"
+                    src="//c.statcounter.com/9117595/0/b58cd28d/0/"
+                    alt="site stats"
+                ></a></p>
             </footer>
 
         </div>
