modify blog collation margins

--- a/css/aura.css
+++ b/css/aura.css
@@ -61,9 +61,9 @@ td, th {
 }
 
 #posts-collate h3 {
-    margin-left: 2em;
+    margin-left: 12px;
 }
 
 #posts-collate li {
-    margin-left: 4em;
+    margin-left: 24px;
 }
