put statcounter script back

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -77,15 +77,22 @@
             <hr />
 
             <footer>
-                <p>&copy; 2011-2015, Aura for PHP <a
-                    title="site stats"
-                    href="//statcounter.com/free-web-stats/"
-                    target="_blank"
-                ><img
-                    class="statcounter"
-                    src="//c.statcounter.com/9117595/0/b58cd28d/0/"
-                    alt="site stats"
-                ></a></p>
+                <p>&copy; 2011-2015, Aura for PHP
+                    <script type="text/javascript">
+                        var sc_project=9117595;
+                        var sc_invisible=0;
+                        var sc_security="b58cd28d";
+                        var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www.");
+                        document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+ "statcounter.com/counter/counter.js'></"+"script>");
+                    </script>
+                    <noscript><div class="statcounter"><a
+                        title="site stats"
+                        href="http://statcounter.com/free-web-stats/"
+                        target="_blank"><img class="statcounter"
+                        src="http://c.statcounter.com/9117595/0/b58cd28d/0/"
+                        alt="site stats"
+                    ></a></div></noscript>
+                </p>
             </footer>
 
         </div>
