slightly different css for docs

--- a/css/aura.css
+++ b/css/aura.css
@@ -56,8 +56,38 @@ body {
     margin-left: 24px;
 }
 
+nav table tr {
+    border-top: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav table tr th {
+    border: none;
+    margin: 0;
+    padding: 6px 13px;
+}
+
+nav table tr td {
+    border: none;
+    margin: 0;
+    padding: 6px 13px;
+}
+
+nav table tr th :first-child, table tr td :first-child {
+    margin-top: 0;
+}
+
+nav table tr th :last-child, table tr td :last-child {
+    margin-bottom: 0;
+}
+
 nav table {
     width: 100%;
+}
+
+nav.navheader table {
+    border-bottom: 1px solid #E1E1E1;
 }
 
 nav.navheader td.curr,
@@ -83,6 +113,10 @@ nav.navheader th.next {
     width: 30%;
 }
 
+nav.navfooter table {
+    border-top: 1px solid #E1E1E1;
+}
+
 nav.navfooter td.prev,
 nav.navfooter th.prev {
     width: 30%;
@@ -100,4 +134,3 @@ nav.navfooter th.next {
     text-align: right;
     width: 30%;
 }
-
