--- a/css/aura.css
+++ b/css/aura.css
@@ -3,6 +3,10 @@ body {
     padding-bottom: 40px;
 }
 
+code {
+    color: 2f4f4f;
+}
+
 .hero-logo {
     padding-top: 10px;
     text-align: center;
