try to add highlighting

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -30,6 +30,7 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
         <link rel="manifest" href="/favicon/manifest.json">
 
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/styles/default.min.css">
         <link rel="stylesheet" href="/css/spacelab.css">
         <link rel="stylesheet" href="/css/aura.css">
         <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
@@ -37,6 +38,7 @@
         <script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
         <script src="/js/vendor/jquery-1.9.1.min.js"></script>
         <script src="/js/vendor/bootstrap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/highlight.min.js"></script>
         <script src="/js/plugins.js"></script>
 
     </head>
