nicer code style

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -30,7 +30,7 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
         <link rel="manifest" href="/favicon/manifest.json">
 
-        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/styles/idea.min.css">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/styles/magula.min.css">
         <link rel="stylesheet" href="/css/spacelab.css">
         <link rel="stylesheet" href="/css/aura.css">
         <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
