add packages dir

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -62,6 +62,7 @@
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li {% if page.active == 'about'        %}class="active"{% endif %}><a href="/about">About</a></li>
+                            <li {% if page.active == 'packages'     %}class="active"{% endif %}><a href="/packages">Packages</a></li>
                             <li {% if page.active == 'framework'    %}class="active"{% endif %}><a href="/framework">Framework</a></li>
                             <li {% if page.active == 'blog'         %}class="active"{% endif %}><a href="/blog">Blog</a></li>
                             <li {% if page.active == 'community'    %}class="active"{% endif %}><a href="/community">Community</a></li>
