Update to have current year automatically update

--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -82,7 +82,7 @@
             <hr />
 
             <footer>
-                <p>&copy; 2011-2015, Aura for PHP
+                <p>&copy; 2011-{{ 'now' | date: "%Y" }}, Aura for PHP
                     <script type="text/javascript">
                         var sc_project=9117595;
                         var sc_invisible=0;
